fix timer array

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <!-- endbuild -->
 
     <script type="text/javascript">
-        otsimo.init({debug:false});
+        otsimo.init({debug:true});
     </script>
 </body>
 
