--- a/index.html
+++ b/index.html
@@ -3,28 +3,36 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Learn Numbers</title>
+    <title>Core Learn Numbers</title>
+    <style>
+        @font-face {
+            font-family: 'mfont';
+            font-style: normal;
+            font-weight: normal;
+            src: url('img/mfont.woff') format('woff');
+        }
+    </style>
 
     <!--build:lib(./) js/phaser.js-->
     <script src="node_modules/phaser/build/phaser.js"></script>
     <!-- endbuild -->
-    
+
     <!--build:libotsimo(./) js/otsimo.js-->
     <script src="node_modules/otsimo/otsimo.js"></script>
     <!-- endbuild -->
- 
+
     <!--build:libsprintf(./) js/sprintf.js-->
     <script src="node_modules/sprintf-js/src/sprintf.js"></script>
     <!-- endbuild -->
-    
+
 </head>
 
 <body style="padding:0;margin:0">
 
 
-<!--build:js js/game.js-->
-<script src="js/game.js"></script>
-<!-- endbuild -->
+    <!--build:js js/game.js-->
+    <script src="js/game.js"></script>
+    <!-- endbuild -->
 
     <script type="text/javascript">
         otsimo.init({debug:true});
