fix gray tileSprite

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     <!--build:libsprintf(./) js/sprintf.js-->
     <script src="node_modules/sprintf-js/src/sprintf.js"></script>
     <!-- endbuild -->
-
 </head>
 
 <body style="padding:0;margin:0">
@@ -35,7 +34,7 @@
     <!-- endbuild -->
 
     <script type="text/javascript">
-        otsimo.init({debug:true});
+        otsimo.init({debug:true, language: "tr", width: 1334, height: 750});
     </script>
 </body>
 
